--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 
+
 :root {
     --swiper-theme-color: #007aff
 }
@@ -133,16 +134,16 @@
 
 .swiper-centered.swiper-horizontal>.swiper-wrapper>.swiper-slide:first-child {
     margin-inline-start:var(--swiper-centered-offset-before)}
-
-/* .swiper-centered.swiper-horizontal>.swiper-wrapper: before {
+/* 
+.swiper-centered.swiper-horizontal>.swiper-wrapper: before {
     height:100%;
     width: var(--swiper-centered-offset-after)
-} */
+}
 
 .swiper-centered.swiper-vertical>.swiper-wrapper>.swiper-slide:first-child {
     margin-block-start:var(--swiper-centered-offset-before)}
 
-/* .swiper-centered.swiper-vertical>.swiper-wrapper: before {
+.swiper-centered.swiper-vertical>.swiper-wrapper: before {
     width:100%;
     height: var(--swiper-centered-offset-after)
 } */
@@ -1449,7 +1450,8 @@ input::-ms-clear,input::-ms-reveal {
 
 @media (min-width: 1200px) {
     .container,.container-xl {
-        max-width:1150px
+        max-width:100%;
+        padding: 0;
     }
 }
 
@@ -1463,7 +1465,7 @@ input::-ms-clear,input::-ms-reveal {
     display: flex;
     flex-wrap: wrap;
     margin-left: -15px;
-    margin-right: -15px
+    /* margin-right: -15px */
 }
 
 .row>* {
@@ -20609,7 +20611,9 @@ mat-month-view .mat-calendar-body-today,mat-month-view .mat-calendar-body-cell-c
 
 @media (min-width: 1200px) {
     .super-web .header__top {
-        padding:15px 0
+        padding:15px 0;
+        max-width: 1150px;
+        margin: auto;
     }
 }
 
@@ -20819,7 +20823,7 @@ mat-month-view .mat-calendar-body-today,mat-month-view .mat-calendar-body-cell-c
 @media (min-width: 1200px) {
     .super-web .navbar--main {
         width:100%;
-        padding: 0;
+        padding: 0px 75px;
         box-shadow: none;
         position: static;
         overflow-y: initial;
