--- a/blocks/shriram2/shriram2.css
+++ b/blocks/shriram2/shriram2.css
@@ -1,122 +1,99 @@
 @media (min-width: 768px) {
-  .article--details[_ngcontent-serverApp-c217889439] {
-    padding-top: 70px;
-    background-color: #f2f2f2;
-  }
+    .article--details[_ngcontent-serverApp-c217889439] {
+        padding-top: 70px;
+        background-color: #f2f2f2;
+    }
 }
 
 @media (min-width: 1200px) {
 
-  .container,
-  .container-xl {
-    max-width: 1150px;
-  }
+    .container,
+    .container-xl {
+        max-width: 1150px;
+    }
 }
 
-@media (min-width: 992px) {
-  .article__share[_ngcontent-serverApp-c217889439] {
-    justify-content: end;
-  }
-}
-
-.article__share[_ngcontent-serverApp-c217889439] {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 15px;
-}
-
-.postdate.postdate--typeTwo {
-  display: flex;
-  justify-content: flex-start;
-  gap: 6px;
-  font-weight: bold;
-  font-size: 14px;
-  margin-bottom: 20px;
-
-}
 
 .postdate {
-  display: flex;
-  gap: 8px;
+    display: flex;
+    gap: 8px;
 }
 
 .social__share {
-  display: none;
-  position: absolute;
+    display: none;
+    position: absolute;
 }
 
 .article__socialShare {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .article__socialShare:hover .social__share {
-  display: block;
-
+    display: block;
 }
 
-.article__socialShare[_ngcontent-serverApp-c217889439]:hover .social__share[_ngcontent-serverApp-c217889439] {
-  opacity: 1;
-  visibility: visible;
+.article__socialShare[_ngcontent-serverApp-c1544222299]:hover .social__share[_ngcontent-serverApp-c1544222299] {
+    opacity: 1;
+    visibility: visible;
 }
 
-
-.social__share[_ngcontent-serverApp-c217889439] {
-  position: absolute;
-  width: 190px;
-  border: 1px solid #ffcb08;
-  background-color: #fff;
-  box-shadow: -2px 8px 10px #0000001f;
-  border-radius: 8px;
-  padding: 10px;
-  transition: all .6s ease;
-  opacity: 0;
-  visibility: hidden;
-  top: 100%;
-  left: 0;
-  z-index: 99;
-  cursor: initial;
+.social__share[_ngcontent-serverApp-c1544222299] {
+    position: absolute;
+    width: 190px;
+    border: 1px solid #ffcb08;
+    background-color: #fff;
+    box-shadow: -2px 8px 10px #0000001f;
+    border-radius: 8px;
+    padding: 10px;
+    transition: all .6s ease;
+    opacity: 0;
+    visibility: hidden;
+    top: 100%;
+    left: 0;
+    z-index: 99;
+    cursor: initial;
 }
 
 .social__list[_ngcontent-serverApp-c217889439] {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .copylink[_ngcontent-serverApp-c217889439] {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 12px;
-  background: #f2f2f2;
-  border-radius: 24px;
-  margin-bottom: 8px;
-  cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    background: #f2f2f2;
+    border-radius: 24px;
+    margin-bottom: 8px;
+    cursor: pointer;
 }
 
 .copylink__ellipsis[_ngcontent-serverApp-c217889439] {
-  display: inline-block;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  padding: 0 10px;
+    display: inline-block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 0 10px;
 }
 
 .social__share[_ngcontent-serverApp-c217889439] p[_ngcontent-serverApp-c217889439] {
-  font-size: 14px;
-  font-family: GilmerMedium, sans-serif;
-  line-height: 1;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #c4c4c4;
+    font-size: 14px;
+    font-family: GilmerMedium, sans-serif;
+    line-height: 1;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #c4c4c4;
 }
 
 .d-flex {
-  gap: 6px;
+    gap: 6px;
 }
 
 .article__shareText {
-  margin-left: 8px;
+    margin-left: 8px;
 }
 
 .pagination[_ngcontent-serverApp-c217889439] {
@@ -131,9 +108,9 @@
     }
 }
 
-.pagination__prev[_ngcontent-serverApp-c217889439], .pagination__next[_ngcontent-serverApp-c217889439] {
-    display: flex
-;
+.pagination__prev[_ngcontent-serverApp-c217889439],
+.pagination__next[_ngcontent-serverApp-c217889439] {
+    display: flex;
     height: 100%;
 }
 
@@ -144,26 +121,192 @@
 }
 
 .pagination__content[_ngcontent-serverApp-c217889439] {
-    display: flex
-;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.pagination__prev[_ngcontent-serverApp-c217889439] a[_ngcontent-serverApp-c217889439], .pagination__next[_ngcontent-serverApp-c217889439] a[_ngcontent-serverApp-c217889439] {
+.pagination__prev[_ngcontent-serverApp-c217889439] a[_ngcontent-serverApp-c217889439],
+.pagination__next[_ngcontent-serverApp-c217889439] a[_ngcontent-serverApp-c217889439] {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
 }
 
-a {
-    color: #2f7ef4;
 
-}
 
 .pagination__content {
-  font-size: 14px;
-  font-weight: bold;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+
+.content[_ngcontent-serverApp-c1052290280] {
+    padding: 16px 0;
+    background-color: #e6e6e6;
+    margin-left: 0;
+}
+
+.faqCard[_ngcontent-serverApp-c1544222299] {
+    padding: 16px;
+    background-color: #fff;
+    border-radius: 16px;
+    margin-bottom: 16px;
+}
+
+@media (min-width: 768px) {
+    .faqCard[_ngcontent-serverApp-c1544222299] {
+        padding: 24px;
+        margin-bottom: 24px;
+    }
+}
+
+.article__share[_ngcontent-serverApp-c1544222299] {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 15px;
+    gap: 20px;
+}
+
+@media (min-width: 992px) {
+    .article__share[_ngcontent-serverApp-c1544222299] {
+        justify-content: end;
+    }
+}
+
+.sideBar[_ngcontent-serverApp-c1052290280] {
+    border-radius: 16px;
+    padding: 16px;
+    background-color: #fff;
+}
+
+@media (min-width: 768px) {
+    .sideBar[_ngcontent-serverApp-c1052290280] {
+        padding: 56px 31px;
+    }
+}
+
+.faqList.splited[_ngcontent-serverApp-c821721029] {
+    padding: 16px;
+    background-color: #fff;
+    border-radius: 16px;
+}
+
+@media (min-width: 768px) {
+    .faqList.splited[_ngcontent-serverApp-c821721029] {
+        padding: 40px 48px;
+    }
+}
+
+@media (min-width: 992px) {
+    .faqList.splited[_ngcontent-serverApp-c821721029] .faqList__content[_ngcontent-serverApp-c821721029] {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+.faqList.splited[_ngcontent-serverApp-c821721029] .faqList__content[_ngcontent-serverApp-c821721029] {
+    position: relative;
+}
+
+@media (min-width: 768px) {
+    .faqList__content[_ngcontent-serverApp-c821721029] {
+        margin-bottom: -48px;
+    }
+}
+
+@media (min-width: 768px) {
+    .faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] {
+        padding-bottom: 24px;
+        margin-bottom: 24px;
+    }
+}
+
+.faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] {
+    border-bottom: solid 1px #d9d9d9;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+.faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] a[_ngcontent-serverApp-c821721029] {
+    font-size: 16px;
+    line-height: 24px;
+    font-family: GilmerRegular, sans-serif;
+    color: #000;
+}
+
+@media (min-width: 992px) {
+    .faqList.splited[_ngcontent-serverApp-c821721029] .faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] {
+        width: calc(50% - 16px);
+    }
+}
+
+@media (min-width: 768px) {
+    .faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] {
+        padding-bottom: 24px;
+        margin-bottom: 24px;
+    }
+}
+
+.faqList__content[_ngcontent-serverApp-c821721029] li[_ngcontent-serverApp-c821721029] {
+    border-bottom: solid 1px #d9d9d9;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+.social__list[_ngcontent-serverApp-c1544222299] {
+    display: flex
+;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.copylink[_ngcontent-serverApp-c1544222299] {
+    display: flex
+;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    background: #f2f2f2;
+    border-radius: 24px;
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+
+.copylink__ellipsis[_ngcontent-serverApp-c1544222299] {
+    display: inline-block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 0 10px;
+}
+
+.social__share[_ngcontent-serverApp-c1544222299] p[_ngcontent-serverApp-c1544222299] {
+    font-size: 14px;
+    font-family: GilmerMedium, sans-serif;
+    line-height: 1;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #c4c4c4;
+}
+@media (min-width: 768px) {
+    .faqList__content[_ngcontent-serverApp-c2085277377] li[_ngcontent-serverApp-c2085277377] {
+        padding-bottom: 24px;
+        margin-bottom: 24px;
+    }
+}
+.faqList__content[_ngcontent-serverApp-c2085277377] li[_ngcontent-serverApp-c2085277377] {
+    border-bottom: solid 1px #d9d9d9;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+.faqList__content[_ngcontent-serverApp-c2085277377] li[_ngcontent-serverApp-c2085277377] a[_ngcontent-serverApp-c2085277377] {
+    font-size: 16px;
+    line-height: 24px;
+    font-family: GilmerRegular, sans-serif;
+    color: #000;
 }
